--- a/style.css
+++ b/style.css
@@ -61,3 +61,12 @@ header{
     top: 5px;
     text-align: center;
 }
+
+#confirmation{
+    font-size: 20px;
+    font-style: italic;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
